--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
-name: 'Get an app token in an Actions workflow.'
+name: "Get an app token in an Actions workflow."
 description: Useful for remedying the problem of restricted access tokens, especially on PRs from forks.
-author: Hamel Husain
+author: Eric Lin
 inputs:
   APP_PEM:
     description: a base64 encoded string version of your PEM file used to authenticate as a GitHub App.  You can apply this encoding in the terminal `cat key.pem | base64`
@@ -12,8 +12,8 @@ outputs:
   app_token:
     description: The installation access token for the GitHub App corresponding to and the current repository.
 branding:
-  color: 'white'
-  icon: 'unlock'
+  color: "white"
+  icon: "unlock"
 runs:
-  using: 'docker'
-  image: 'docker://hamelsmu/app-token'
+  using: "docker"
+  image: "docker://ezzah/actions-app-token"
