--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,14 +7,21 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: build-temp-container
-        run: |
-          echo ${PASSWORD} | docker login -u $USERNAME --password-stdin
-          docker build -t ezzah/actions-app-token:temp -f prebuild.Dockerfile .
-          docker push ezzah/actions-app-token:temp
-        env:
-          USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          platforms: linux/arm64, linux/amd64
+          push: true
+          file: prebuild.Dockerfile
+          tags: |
+            ezzah/actions-app-token:temp
 
   test-container:
     needs: [build-temp-container]
