--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "Get an app token in an Actions workflow."
+name: "Use existing GitHub App token in an Actions workflow."
 description: Useful for remedying the problem of restricted access tokens, especially on PRs from forks.
 author: Eric Lin
 inputs:
